fixed index title nav button too small

--- a/css/index.css
+++ b/css/index.css
@@ -58,8 +58,9 @@
 #titleNav{
 	position:absolute;
 	height:10px;
-  left:5px;
-	bottom:10px;
+  left:0;
+	bottom:0;
+	padding:50px 50px 10px 5px;
   z-index: 10;
 }
 
